tests/tsc-references/classes/classDeclarations/classAbstractKeyword/classAbstractOverrideWithAbstract/input.ts/es2015.1.normal/output.js
class A {
    foo() {
    }
}
class B extends A {
}
class AA {
    foo() {
    }
}
class BB extends AA {
    bar() {
    }
}
class CC extends BB {
} // error
class DD extends BB {
    foo() {
    }
}
